--- a/src/App.css
+++ b/src/App.css
@@ -58,29 +58,6 @@ main {
   font-weight: bold;
 }
 
-.feature__item + .feature__item {
-  margin-top: 0.8rem;
-}
-
-/* Hide radios from sighted users,
-while keeping them available to the keyboard */
-.feature__option {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
-.feature__label {
-  display: block;
-  padding: 0.8rem;
-  border: 0.1rem solid #d6d6d6;
-  border-radius: 0.4rem;
-}
 
 .feature__label:hover {
   border-color: #888;
@@ -125,21 +102,21 @@ while keeping them available to the keyboard */
 .summary__option__cost {
   grid-area: cost;
   text-align: right;
-}
+} 
 
-.summary__total {
+/* .summary__total {
   font-size: 2.2rem;
   line-height: 2.4;
   display: flex;
   margin-top: 1.5rem;
   border-top: solid 1px #252525;
-}
+} */
 
-.summary__total__label {
+/* .summary__total__label {
   font-weight: bold;
   flex: 2;
 }
 
 .summary__total__value {
   text-decoration: underline;
-}
+}  */
