--- a/src/App.css
+++ b/src/App.css
@@ -69,16 +69,20 @@ ul {
 
 /* Hide radios from sighted users,
 while keeping them available to the keyboard */
-.feature__option {
-  /* ! position: absolute !important; */
-  /*! clip: rect(1px 1px 1px 1px); */ /* IE6, IE7 */
-  /*! clip: rect(1px, 1px, 1px, 1px); */
-  padding: 0 !important;
+ .feature__option {
+  position: absolute ;
+  clip: rect(1px 1px 1px 1px);  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  /* padding: 0 !important;
   border: 0 !important;
-  /*! height: 1px !important; */
-  /*! width: 1px !important; */
-  overflow: hidden;
-}
+  height: 1px !important;
+  width: 1px !important; */
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px; 
+  overflow: hidden; 
+ } 
 
 .feature__label {
   display: block;
@@ -92,10 +96,11 @@ while keeping them available to the keyboard */
   cursor: pointer;
 }
 
-/* .feature__option:checked + .feature__label {
+.feature__option:checked + .feature__label {
   border: 0.2rem solid #0070c9;
-} */
-.feature__option:checked {
+}
+.feature__option:checked , 
+.feature__option .feature__selected .feature__label{
   border: 0.2rem solid #0070c9;
 }
 
@@ -107,6 +112,35 @@ while keeping them available to the keyboard */
 .feature__option:not(:checked) + .feature__label {
   cursor: pointer;
 }
+ 
+
+/* tech team style suggested */
+
+/* .feature__option {
+  padding: 0; careful with use of !important, note that it was removed here */
+  /* border: 0;
+  overflow: hidden;
+} */
+
+/* .feature__label {
+  display: block;
+  padding: 0.8rem;
+  border: 0.1rem solid #d6d6d6;
+  border-radius: 0.4rem;
+} */
+
+/* .feature__selected {
+  border: 0.2rem solid #0070c9;
+} */
+
+/* .feature__label:hover {
+  border-color: #888;
+  cursor: pointer;
+} */
+
+/* this ends the style from grading team */
+
+
 
 .main__summary {
   flex: 3 1;
